# gte

./: .dockerignore  .gitignore  .rubocop.yml  AGENTS.md  CLAUDE.md  Cargo.toml  Gemfile  Makefile  README.md  RUNS.md  Rakefile  flake.nix  gte.gemspec  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-scaffold/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  1-CONTEXT.md
.planning/phases/02-rust-inference-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-ruby-bindings-+-api/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-benchmark-validation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
bench/: benchmark.rb  benchmark_python.py  harness.rb  ledger.rb  memory_probe.rb  parity_check.rb  puma_compare.rb  puma_matrix_sweep.rb  pure_ruby_compare.rb  pure_ruby_runtime.rb  python_onnxruntime.py  runs_ledger.rb  thread_sweep.rb
bench/rails/: .dockerignore  Dockerfile  docker-compose.yml
bench/rails/app/: Gemfile
bench/rails/app/app/controllers/: embed_controller.rb  health_controller.rb
bench/rails/app/config/: application.rb  boot.rb  puma.rb  routes.rb
bench/rails/app/config/environments/: production.rb
bench/rails/app/config/initializers/: runtime.rb
bench/rails/scripts/: build.sh  compare.sh  stress.sh  sweep.sh  validate.py  validate.sh
bench/rails/stress/: embed.lua  queries.txt
ext/gte/: Cargo.toml  build.rs  extconf.rb  rustfmt.toml
ext/gte/benches/: hot_path.rs
ext/gte/src/: embedder.rs  error.rs  lib.rs  model_config.rs  model_profile.rs  pipeline.rs  postprocess.rs  reranker.rs  ruby_embedder.rs  session.rs  tokenizer.rs
ext/gte/tests/: embedder_unit_test.rs  inference_integration_test.rs  padding_regression_test.rs  postprocess_unit_test.rs  tokenizer_unit_test.rs
ext/gte/tests/fixtures/minimal/: tokenizer.json
lib/: gte.rb
lib/gte/: clip.rb  config.rb  configuration.rb  e5.rb  embedder.rb  model.rb  model_config.rb  pool.rb  reranker.rb  siglip2.rb  version.rb
script/: download-models
spec/: spec_helper.rb
spec/bench/: harness_spec.rb  ledger_spec.rb
spec/gte/: binary_path_spec.rb  clip_spec.rb  configuration_spec.rb  e5_spec.rb  embedder_config_spec.rb  embedder_spec.rb  fetch_cache_spec.rb  integration_spec.rb  reranker_spec.rb  siglip2_spec.rb  threading_spec.rb
spec/support/: fixtures.rb
