[package]
name = "gte"
version = "0.1.0"
edition = "2021"
authors = ["elcuervo <elcuervo@elcuervo.net>"]
license = "MIT"
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
rb-sys = { version = "0.9", features = ["stable-api-compiled-fallback"] }
magnus = "0.8"
ort = { version = "=2.0.0-rc.9", features = ["ndarray"] }
ort-sys = "=2.0.0-rc.9"
tokenizers = "0.21.0"
ndarray = "0.16.0"
half = "2"
