[package]
name = "gte"
version = "0.0.16"
edition = "2021"
authors = ["elcuervo <elcuervo@elcuervo.net>"]
license = "MIT"
publish = false
build = "build.rs"

[lib]
# cdylib: Ruby FFI extension; rlib: enables integration tests in tests/ to link as external crate
crate-type = ["cdylib", "rlib"]

[features]
# ruby-ffi: gate magnus + rb-sys (Ruby C symbols) so Rust integration tests can link without Ruby.
# This feature is enabled by default for the cdylib build (rake compile / extconf.rb).
# When running `cargo test`, this feature must be excluded: `cargo test --no-default-features`.
default = ["ruby-ffi"]
ruby-ffi = ["dep:magnus", "dep:rb-sys"]

[dependencies]
rb-sys = { version = "0.9", features = ["stable-api-compiled-fallback"], optional = true }
magnus = { version = "0.8", optional = true }
ort = { version = "=2.0.0-rc.12", features = ["ndarray", "xnnpack"] }
parking_lot = "0.12"
tokenizers = "0.21.0"
ndarray = "0.17"
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hot_path"
harness = false

[lints.rust]
unsafe_code = "deny"
rust_2018_idioms = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
# Reasonable exceptions to pedantic lints:
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
similar_names = "allow"
too_many_lines = "allow"
# ndarray::ArrayView types are Copy — passing by value is idiomatic
needless_pass_by_value = "allow"
# ort::Outlet::name() is on a private type — closure is required
redundant_closure_for_method_calls = "allow"
# Transitive dep conflicts are not actionable in this crate
multiple_crate_versions = "allow"
